--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,230 +6,22 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: a3.bcbot.in
-    port: 8880
-    cipher: auto
-    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a3.bcbot.in
-  - &id002
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 162.159.200.3
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.18.15.147
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.18.15.150
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id005
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.18.15.149
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id006
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 162.159.200.7
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.visaapp.top
-  - &id007
     name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: trojan
-    server: 104.17.186.227
+    type: vmess
+    server: tgju.org
     port: 443
-    udp: true
-    password: Mahanvpn
-    sni: mahanvip.mahantu.top
-    skip-cert-verify: false
-    network: grpc
-    grpc-opts:
-      grpc-service-name: mahanvip.mahantu.top
-  - &id008
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.18.154.42
-    port: 80
     cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us3.889611.com
-  - &id009
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 162.159.200.6
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id010
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 8880
-    cipher: auto
-    uuid: ae16d5a4-9a22-4177-8884-77aa3b309d30
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/bYdJ7Vc2We
-      headers:
-        host: us6gzxQRrE4.fzbqfrse.xyz
-  - &id011
-    name: 🇰🇿_KZ_哈萨克斯坦
-    type: vmess
-    server: kz-v2ray.ipracevpn.com
-    port: 8443
-    cipher: auto
-    uuid: 48b10b02-2c60-4323-bc65-a11b15144745
+    uuid: 562ae412-d7b5-4f1e-dd0d-82e073193b21
     alterId: 0
     tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰
-    type: vmess
-    server: 104.17.2.183
-    port: 80
-    cipher: auto
-    uuid: f256a3ae-0f85-4a1d-d0cd-2d0b4b73f4f1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /fa
       headers:
-        host: v3ra3do.wakeuptimerap.shop
-  - &id013
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 104.18.15.148
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id014
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 213.202.216.14
-    port: 443
-    udp: true
-    password: 94fe4445-fc3f-4dd4-9bac-438b54f994c9
-    sni: downloadde.xn--mes358acgm99l.com
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇳🇿_NZ_新西兰
-    type: trojan
-    server: 216.73.156.230
-    port: 443
-    udp: true
-    password: 11e247e5-136d-45f1-844a-a7f054d36bab
-    sni: 216.73.156.230
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.2.113
-    port: 80
-    cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.apple.com
-  - &id017
-    name: 🇱🇾_LY_利比亚->🇹🇷_TR_土耳其
+        host: cdn.pokerad.fun
+  - &id002
+    name: 🇱🇾_LY_利比亚
     type: vmess
     server: 197.215.140.234
     port: 80
@@ -243,13 +35,13 @@ proxies:
       path: /@forwardv2ray
       headers:
         host: softiri.serveirc.com
-  - &id018
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - &id003
+    name: 🇺🇸_US_美国
     type: vmess
-    server: 162.159.200.4
+    server: glaSco.fx-trAder.shop
     port: 80
     cipher: auto
-    uuid: b2d821b2-f727-4e67-898d-1a29bf41ee0d
+    uuid: cdbb0899-7113-4d4e-f868-31339c75ad3c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -257,22 +49,59 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ca3.889611.com
-  - &id019
-    name: 🇺🇸_US_美国_10
+        host: vvv2vayo2.everythingisreve.shop
+  - &id004
+    name: 🇸🇨_SC_塞舌尔->🇭🇰_HK_香港
     type: vmess
-    server: 104.21.32.215
-    port: 8880
+    server: 156.251.226.142
+    port: 56120
     cipher: auto
-    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
+    uuid: a3dfbdd6-7e01-4735-9973-e3dd056c129e
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /changding-tls1?ed=2048
       headers:
-        host: a3.bcbot.in
+        host: hk-300.changding.tech
+  - &id005
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 142.171.237.214
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/221312281009
+      headers:
+        host: www.23168499.xyz
+  - &id006
+    name: 🇮🇷_IR_伊朗
+    type: vmess
+    server: 79.143.84.117
+    port: 25477
+    cipher: auto
+    uuid: 9b788fa7-9e35-4ed5-e0e9-7d788b26ec07
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇨🇭_CH_瑞士
+    type: vmess
+    server: 94.131.99.8
+    port: 47182
+    cipher: auto
+    uuid: 81b2b630-8b6a-404f-b996-b12f13db5786
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -306,18 +135,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -330,18 +147,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
   - name: SELECT
     type: select
     proxies:
@@ -352,18 +157,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
